@@ -296,6 +296,7 @@ simplify code and improvements
 fix artwork
 sync performance improvements
 artwork fixes
+minor artwork fix and apply sqlite thread save patches
 
 
 6.0.13 (beta)
